# edu-advent-2022

./: .gitignore  Makefile  README.md  advent.cabal  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.lhs  day08.md  day09.lhs  day09.md  day10.lhs  day10.md  day11.lhs  day11.md  day12.lhs  day12.md  day13.lhs  day13.md  day14.lhs  day14.md  day15.lhs  day15.md  default.nix  get  getinput  runtests
include/: prelude.hs
